syntax = "proto3";
package de.phyrone.kiwi.snowflake;
option java_multiple_files = true;
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;

message SnowflakeRequest{
  uint32 count = 1;
}

message SnowflakeResponse{
  repeated sfixed64 snowflakes = 1;
}

service SnowflakeService{
  rpc GetSnowflakes(SnowflakeRequest) returns (SnowflakeResponse);
}